# GordonBook_OpenGL

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  main.h
Shaders/: fragShader.glsl  vertShader.glsl
glad/: glad.c  glad.h
src/: reader.cpp  reader.h
